[gd_scene load_steps=7 format=3 uid="uid://5r5oq3pr8bb7"]

[ext_resource type="Script" path="res://scripts/bullets/bullet.gd" id="1_smo80"]
[ext_resource type="Texture2D" uid="uid://3j7whj1v2r3q" path="res://assets/gfx/Hollow_CircleTEMP.png" id="2_hk06q"]
[ext_resource type="Texture2D" uid="uid://cu4a2xr2p76hr" path="res://assets/gfx/Enemy/clown47/ClownBullet.png" id="3_0g5tm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xq4ye"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dg4m4"]
radius = 6.0
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mw8v3"]
radius = 6.0
height = 40.0

[node name="Bullet" type="CharacterBody2D"]
scale = Vector2(0.1, -0.1)
script = ExtResource("1_smo80")

[node name="Player" type="Sprite2D" parent="."]
scale = Vector2(0.414198, 0.414198)
texture = ExtResource("2_hk06q")

[node name="AK47" type="Sprite2D" parent="."]
scale = Vector2(0.120156, 0.120156)
texture = ExtResource("3_0g5tm")

[node name="PlayerColl" type="CollisionShape2D" parent="."]
scale = Vector2(4.36496, 4.36496)
shape = SubResource("CircleShape2D_xq4ye")
one_way_collision_margin = 3.5

[node name="AK47Coll" type="CollisionShape2D" parent="."]
scale = Vector2(5, 5)
shape = SubResource("CapsuleShape2D_dg4m4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(5, 5)
shape = SubResource("CapsuleShape2D_mw8v3")

[node name="PlayerColl" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(4.36496, 4.36496)
shape = SubResource("CircleShape2D_xq4ye")
one_way_collision_margin = 3.5
